data/raw_logs/syntactic/syn_8.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_8.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_8.c:1:21: error: 'x' undeclared (first use in this function)
    1 | int main() { switch(x) case 1: break; }
      |                     ^
/Users/krishtayade/CD_Lab_Project/data/code_snippets/syntactic/syn_8.c:1:21: note: each undeclared identifier is reported only once for each function it appears in
